# data-explorer

./: .gitignore  Data_Explorer.py  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source_request.yml  feature_request.yml  pull_request_template.md  question.yml
docs/: metadata.json
pages/: About.py  Admin.py  User_Guide.py
src/: __init__.py  constants.py
src/components/: export_manager.py  metadata_display.py  ui_components.py
src/core/: data_processor.py  filter_engine.py  session_manager.py
src/pages/: __init__.py  about.py  data_explorer.py
src/utils/: helpers.py
